// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Button should render a block split type 1`] = `
<SplitButton
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={true}
  onClick={[Function]}
  primaryOptionLabel="Primary Option"
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
</SplitButton>
`;

exports[`Dropdown Button should render a default split type 1`] = `
<SplitButton
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  onClick={[Function]}
  primaryOptionLabel="Primary Option"
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
</SplitButton>
`;

exports[`Dropdown Button should render a disabled split type 1`] = `
<SplitButton
  disabled={true}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  onClick={[Function]}
  primaryOptionLabel="Primary Option"
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
</SplitButton>
`;

exports[`Dropdown Button should render a split type with custom attributes 1`] = `
<SplitButton
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  onClick={[Function]}
  other-custom-attribute="purple"
  primaryOptionLabel="Primary Option"
  test-custom-attribute={true}
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
</SplitButton>
`;

exports[`Dropdown Button should render a split type with multiple children 1`] = `
<SplitButton
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  onClick={[Function]}
  primaryOptionLabel="Primary Option"
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
  <Option
    label="2nd Option"
    onClick={[Function]}
  />
  <Option
    label="3rd Option"
    onClick={[Function]}
  />
</SplitButton>
`;

exports[`Dropdown Button should render an open split type 1`] = `
<SplitButton
  disabled={false}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isBlock={false}
  onClick={[Function]}
  primaryOptionLabel="Primary Option"
  variant="neutral"
>
  <Option
    label="1st Option"
    onClick={[Function]}
  />
</SplitButton>
`;
